Add basic rendering script

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <title>Space Invaders</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src = "pixi.js"></script>
   </head>
   <body>
-
+    <div id="display"></div>
 
     <h1>Welcome</h1>
+
+    <script src="app.js"></script>
   </body>
 </html>
