Add collision boxes for objects, change app loading

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Space Invaders</title>
     <link rel="stylesheet" href="styles.css">
     <script src = "pixi.js"></script>
+    <script src = "CollisionBox.js"></script>
+    <script src = "Batch.js"></script>
+    <script src = "Bullet.js"></script>
     <script src = "Player.js"> </script>
     <script src = "Enemy.js"> </script>
     <script src = "EnemyGroup.js"> </script>
