--- a/index.html
+++ b/index.html
@@ -3,19 +3,11 @@
   <head>
     <title>Space Invaders</title>
     <link rel="stylesheet" href="styles.css">
-    <script src = "pixi.js"></script>
-    <script src = "CollisionBox.js"></script>
-    <script src = "Batch.js"></script>
-    <script src = "Bullet.js"></script>
-    <script src = "Player.js"> </script>
-    <script src = "Enemy.js"> </script>
-    <script src = "EnemyGroup.js"> </script>
-  </head>
+ </head>
   <body>
     <div id="display"></div>
 
     <h1>Welcome</h1>
-
-    <script src="app.js"></script>
+    <script type="module" src="./app.mjs"></script>
   </body>
 </html>
